--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -181,6 +181,13 @@
     <string name="wifi80_5">Only 5G -> 80 MHz</string>
     <string name="wifi80_25">2G+5G -> 80 Mhz</string>
 
+    <!-- SELinux -->
+    <string name="selinux_title">SELinux status</string>
+    <string name="selinux_summary">Status of the SELinux security system</string>
+    <string name="selinux_dialogTitle">Status of the SELinux security system</string>
+    <string name="selinux_enforcing">Enforcing</string>
+    <string name="selinux_permissive">Permissive</string>
+
     <!-- FPS Info -->
     <string name="fps_info_title">FPS Info Overlay</string>
     <string name="fps_info_summary">Show current frames per second by overlay</string>
